...
                inkColor={inkColor}
                muteColor={muteColor}
              />
              {isAuthenticated ? (
                <DrawerItem
                  Icon={ClipboardText}
                  label="Мои заказы"
                  onPress={() => handlePush("/(tabs)/orders")}
                  inkColor={inkColor}
                  muteColor={muteColor}
                />
              ) : null}
              <DrawerItem
...
